--- a/MyIoTService/src/Web/appsettings.json
+++ b/MyIoTService/src/Web/appsettings.json
@@ -9,5 +9,9 @@
   "AllowedHosts": "*",
   "sql": {
     "connectionString": "Server=mssql;Database=iot;User=sa;Password=Your_password123;"
+  },
+  "mqtt": {
+    "clientId": "MyIoTService",
+    "server": "localhost"
   }
 }
