add device data

--- a/MyIoTService/src/Web/appsettings.json
+++ b/MyIoTService/src/Web/appsettings.json
@@ -12,6 +12,7 @@
   },
   "mqtt": {
     "clientId": "MyIoTService",
-    "server": "localhost"
+    "server": "localhost",
+    "devicesTopic":  "devices"
   }
 }
