Add user authentication

--- a/MyIoTService/src/Domain/Domain.csproj
+++ b/MyIoTService/src/Domain/Domain.csproj
@@ -6,4 +6,9 @@
     <RootNamespace>MyIoTService.Domain</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.0" />
+  </ItemGroup>
+
 </Project>
