--- a/MyIoTService/src/Web/appsettings.json
+++ b/MyIoTService/src/Web/appsettings.json
@@ -1,9 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Trace",
+      "Microsoft": "Trace",
+      "Microsoft.Hosting.Lifetime": "Trace"
     }
   },
   "AllowedHosts": "*",
@@ -13,6 +13,9 @@
   "mqtt": {
     "clientId": "MyIoTService",
     "server": "localhost",
-    "devicesTopic":  "devices"
+    "devicesTopic": "devices"
+  },
+  "jwt": {
+    "secret": "my secret key that should be bigger than 128 bits for our choosen algorithm"
   }
 }
