add client automatic update and auth

--- a/ClientEmulator/ClientEmulator/appsettings.json
+++ b/ClientEmulator/ClientEmulator/appsettings.json
@@ -11,5 +11,6 @@
     "clientId": "ClientEmulator",
     "server": "localhost",
     "devicesTopic": "devices"
-  }
+  },
+  "Urls": "http://localhost:5010"
 }
