Change mosquitto to hivemq. Add device authentication

--- a/MyIoTService/src/Web/appsettings.json
+++ b/MyIoTService/src/Web/appsettings.json
@@ -13,7 +13,10 @@
   "mqtt": {
     "clientId": "MyIoTService",
     "server": "localhost",
-    "devicesTopic": "devices"
+    "devicesTopic": "devices",
+    "user": "myiotservice",
+    "password": "secret",
+    "userCredentialsFileLocation": "../../../hivemq/extensions/hivemq-file-rbac-extension/credentials.xml"
   },
   "jwt": {
     "secret": "my secret key that should be bigger than 128 bits for our choosen algorithm"
